; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/extr_ssl_rsa.c_SSL_use_PrivateKey_ASN1.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/extr_ssl_rsa.c_SSL_use_PrivateKey_ASN1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SSL_F_SSL_USE_PRIVATEKEY_ASN1 = common dso_local global i32 0, align 4
@ERR_R_ASN1_LIB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SSL_use_PrivateKey_ASN1(i32 %0, i32* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %13 = load i8*, i8** %8, align 8
  store i8* %13, i8** %11, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i64, i64* %9, align 8
  %16 = call i32* @d2i_PrivateKey(i32 %14, i32* null, i8** %11, i64 %15)
  store i32* %16, i32** %12, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %22

18:                                               ; preds = %4
  %19 = load i32, i32* @SSL_F_SSL_USE_PRIVATEKEY_ASN1, align 4
  %20 = load i32, i32* @ERR_R_ASN1_LIB, align 4
  %21 = call i32 @SSLerr(i32 %19, i32 %20)
  store i32 0, i32* %5, align 4
  br label %29

22:                                               ; preds = %4
  %23 = load i32*, i32** %7, align 8
  %24 = load i32*, i32** %12, align 8
  %25 = call i32 @SSL_use_PrivateKey(i32* %23, i32* %24)
  store i32 %25, i32* %10, align 4
  %26 = load i32*, i32** %12, align 8
  %27 = call i32 @EVP_PKEY_free(i32* %26)
  %28 = load i32, i32* %10, align 4
  store i32 %28, i32* %5, align 4
  br label %29

29:                                               ; preds = %22, %18
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32* @d2i_PrivateKey(i32, i32*, i8**, i64) #1

declare dso_local i32 @SSLerr(i32, i32) #1

declare dso_local i32 @SSL_use_PrivateKey(i32*, i32*) #1

declare dso_local i32 @EVP_PKEY_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
